Fixes #3416: Move a11y style check so that it does not depend on an external style sheet. Tested with IE 6, FF 2, Safari 2 and Opera 9.21. IE 6 and FF 2 browsers use the high contrast mode of the OS, and the code correctly detected the high contrast mode.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@9141 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -138,19 +138,8 @@
 
 
 /**** 
-		A11Y CHECK 
+		A11Y 
  ****/
-#a11yTestNode {
-	/* used to test if high contrast mode is on or images are turned off */
-	border: 1px solid;
-	border-color:red green;
-	position: absolute;
-	left: -999px;
-	top: -999px;
-	background-image: url("../form/templates/blank.gif");
-}  
-
-
 .dijit_a11y * {
 	background-image:none !important;
 	background-color:transparent !important;
